samples/_failures_safe/1761089811_cee0b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6686f81f.c: In function ‘main’:
./samples/SAFE/__tmp_6686f81f.c:150:5: error: expected declaration or statement at end of input
  150 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
